--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  width: 100%;
+  max-width: 100%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -38,6 +38,27 @@ main .main-content {
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
   padding: 20px;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 @media(max-width: 992px) {
