--- a/src/components/HomeComponents/homeHeader/HomeHeader.module.css
+++ b/src/components/HomeComponents/homeHeader/HomeHeader.module.css
@@ -4,3 +4,16 @@
     align-items: center;
     justify-content: space-between;
 }
+
+@media(max-width: 768px) {
+    .mainHeader {
+        position: relative;
+    }
+}
+
+@media(max-width: 320px) {
+    .mainHeader {
+        flex-direction: column;
+        align-items: start;
+    }
+}
