--- a/src/components/SideBarComponents/calendar/Calendar.module.css
+++ b/src/components/SideBarComponents/calendar/Calendar.module.css
@@ -140,15 +140,17 @@
         flex-direction: column;
         width: 333px;
         height: 324px;
-        transform: translateX(-120%);
-        transition: all .35s ease;
-        -webkit-transition: all .35s ease;
-        -moz-transition: all .35s ease;
-        -ms-transition: all .35s ease;
-        -o-transition: all .35s ease;
-        -webkit-transform: translateX(-120%);
-        -moz-transform: translateX(-120%);
-        -ms-transform: translateX(-120%);
-        -o-transform: translateX(-120%);
-    }
+        transform: translateX(0);
+        -webkit-transform: translateX(0);
+        -moz-transform: translateX(0);
+        -ms-transform: translateX(0);
+        -o-transform: translateX(0);
 }
+}
+
+@media(max-width: 768px) {
+    .calendarContainer {
+        display: none;
+}
+}
+
