fixed bug with menuTablet layout

--- a/src/components/HeaderComponents/headerMenu/HeaderMenu.module.css
+++ b/src/components/HeaderComponents/headerMenu/HeaderMenu.module.css
@@ -32,6 +32,11 @@
     align-content: center;
     justify-items: center;
     z-index: 4;
+    transition: all .3s ease;
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    -ms-transition: all .3s ease;
+    -o-transition: all .3s ease;
 }
 
 @media(max-width: 992px) {
@@ -42,37 +47,28 @@
 
 @media(max-width: 992px) {
     .headerMenuTablet {
-        display: none;
+        position: fixed;
+        top: 65px;
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(2, 1fr);
         align-content: center;
         justify-items: center;
-        position: absolute;
-        top: 80px;
-        right: 0px;
         width: 80px;
         background-color: transparent;
         background-color: rgba(172, 207, 255, 0.3);
         backdrop-filter: blur(5px);
         padding: 5px 20px;
-        z-index: 5;
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
-        transform: translateX(150%);
-        -webkit-transform: translateX(150%);
-        -moz-transform: translateX(150%);
-        -ms-transform: translateX(150%);
-        -o-transform: translateX(150%);
-        transition: all .3s ease;
-        -webkit-transition: all .3s ease;
-        -moz-transition: all .3s ease;
-        -ms-transition: all .3s ease;
-        -o-transition: all .3s ease;
-}
+        transform: translateX(120%);
+        -webkit-transform: translateX(120%);
+        -moz-transform: translateX(120%);
+        -ms-transform: translateX(120%);
+        -o-transform: translateX(120%);
+    }
 
     .headerMenuTablet.visibleTablet {
-        display: block;
         transform: translateX(0%);
         -webkit-transform: translateX(0%);
         -moz-transform: translateX(0%);
@@ -86,5 +82,5 @@
         -moz-transform: scale(1.2);
         -ms-transform: scale(1.2);
         -o-transform: scale(1.2);
-}
+    }
 }
