--- a/src/components/HomeComponents/homeHeaderButton/HomeHeaderButton.module.css
+++ b/src/components/HomeComponents/homeHeaderButton/HomeHeaderButton.module.css
@@ -1,6 +1,7 @@
 .todayBtn {
-    font-size: 1.2em;
+    font-size: 1.23em;
     border-radius: 80px;
+    color: var(--main-text);
     border-color: rgba(0, 0, 0, .2);
     -webkit-border-radius: 80px;
     -moz-border-radius: 80px;
@@ -23,22 +24,22 @@
 @media(max-width: 768px) {
     .todayBtn {
         position: absolute;
-        border-radius: 15px;
         top: -45px;
         font-size: 1em;
-        border-color: rgba(0, 0, 0, .2);
-        padding: 9px 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 8px;
         background-color: rgba(172, 207, 255, 0.5);
-        margin-right: 20px;
-        cursor: pointer;
+        border-radius: 15px;
         -webkit-border-radius: 15px;
         -moz-border-radius: 15px;
         -ms-border-radius: 15px;
         -o-border-radius: 15px;
+    }
+
 }
-    
+
+
+@media(max-width: 576px) {
+    .todayBtn {
+        font-size: .95em;
+    }
+
 }
