--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
+:root {
+  --main-light-blue: rgba(172, 207, 255, 0.15);
+  --main-white: rgba(255, 255, 255, 1);
+  --main-light-gray: rgba(95, 95, 95, 0.06);
+
+  --main-text: black;
+
+  --bg-subtask-pink: rgb(255, 136, 250, .2);
+  --bg-subtask-yellow: rgb(247, 192, 109, .2);
+  --bg-subtask-pink: rgb(153, 118, 255, .2);
+}
+
 * {
   font-family: "DM Sans", sans-serif;
+  color: var(--main-text);
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
+
 body {
-  max-width: 100%;
+  width: 100%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 0px 20px;
-  background-color: rgba(172, 207, 255, 0.15);
+  background-color: var(--main-light-blue);
   overflow-x: hidden;
-}
-
-header {
-  height: 88px;
 }
 
 main {
@@ -31,7 +41,7 @@ main {
 
 main .main-content {
   flex: 1;
-  background-color: #fff;
+  background-color: var(--main-white);
   border-radius: 20px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
