--- a/src/components/HeaderComponents/headerMenu/HeaderMenu.module.css
+++ b/src/components/HeaderComponents/headerMenu/HeaderMenu.module.css
@@ -18,11 +18,16 @@
     padding: 8px;
     background-color: transparent;
     cursor: pointer;
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
 }
 
 .headerMenuTablet {
-    position: absolute;
-    top: 62px;
+    position: fixed;
+    top: 75px;
     right: 0px;
     width: 80px;
     display: grid;
@@ -39,23 +44,13 @@
     -o-transition: all .3s ease;
 }
 
+
 @media(max-width: 992px) {
     .headerMenuBtn {
         padding: 4px;
     }
-}
 
-@media(max-width: 992px) {
     .headerMenuTablet {
-        position: fixed;
-        top: 65px;
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        align-content: center;
-        justify-items: center;
-        width: 80px;
-        background-color: transparent;
         background-color: rgba(172, 207, 255, 0.3);
         backdrop-filter: blur(5px);
         padding: 5px 20px;
