--- a/src/components/HomeComponents/taskItem/TaskItem.module.css
+++ b/src/components/HomeComponents/taskItem/TaskItem.module.css
@@ -1,6 +1,6 @@
 .taskItem {
     position: relative;
-    background-color: rgba(172, 207, 255, 0.15);
+    background-color: var(--main-light-blue);
     padding: 12px;
     margin-bottom: 12px;
     border-radius: 20px;
@@ -10,7 +10,6 @@
     -o-border-radius: 20px;
     display: flex;
     align-items: center;
-    gap: 12px;
 }
 
 .taskDate {
@@ -22,6 +21,7 @@
 }
 
 .taskDay {
+    color: var(--main-text);
     font-weight: 500;
     font-size: 1.6em;
     width: 40px;
@@ -31,6 +31,7 @@
 }
 
 .taskMonth {
+    color: var(--main-text);
     flex: 1;
     font-weight: 500;
     font-size: 1em;
@@ -40,6 +41,7 @@
 .taskYear {
     position: absolute;
     top: -10px;
+    color: var(--main-text);
     background-color: rgba(255, 136, 250, .45);
     padding: 4px 6px;
     border-radius: 10px;
@@ -56,36 +58,43 @@
     gap: 12px;
 }
 
+@media(max-width: 768px) {
+    .taskDate {
+        width: 130px;
+    }
+
+    .taskDay {
+        font-size: 1.5em;
+    }
+
+    .taskMonth {
+        font-size: .9em;
+    }
+}
+
 
 @media(max-width: 576px) {
     .taskItem {
-        position: relative;
-        background-color: rgba(172, 207, 255, 0.15);
-        padding: 12px;
-        margin-bottom: 12px;
         border-radius: 15px;
         -webkit-border-radius: 15px;
         -moz-border-radius: 15px;
         -ms-border-radius: 15px;
         -o-border-radius: 15px;
-        display: flex;
-        align-items: center;
-        gap: 12px;
-}
+    }
 
     .taskDate {
-        width: 130px;
-        padding: 6px 5px;
+        width: 110px;
+        padding: 2px;
         display: flex;
         align-items: center;
-        gap: 8px;
+        gap: 2px;
         font-size: .8em;
     }
 
     .taskDay {
         font-weight: 500;
         font-size: 1.6em;
-        width: 40px;
+        width: 28px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -94,7 +103,7 @@
     .taskMonth {
         flex: 1;
         font-weight: 500;
-        font-size: 1em;
+        font-size: 1.1em;
         text-transform: uppercase;
     }
 
@@ -114,7 +123,7 @@
         flex: 1;
         display: flex;
         flex-direction: column;
-        gap: 12px;
+        gap: 25px;
     }
 }
 
@@ -134,9 +143,9 @@
         -moz-border-radius: 7px;
         -ms-border-radius: 7px;
         -o-border-radius: 7px;
-}
+    }
 
-    
+
     .taskDay {
         font-weight: 500;
         font-size: 1.1em;
