--- a/src/components/SideBarComponents/sidebar/Sidebar.module.css
+++ b/src/components/SideBarComponents/sidebar/Sidebar.module.css
@@ -16,14 +16,21 @@
 }
 
 .createBtn {
+    font-family: "DM Sans", sans-serif;
+    color: var(--main-text);
+    font-size: 1.4em;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 12px;
+    margin-bottom: 28px;
     padding: 20px 25px;
     width: 147px;
     height: 74px;
-    background-color: #ffff;
+    background-color: var(--main-white);
+    font-weight: 400;
+    font-style: normal;
+    cursor: pointer;
     border: none;
     border-radius: 20px;
     -webkit-border-radius: 20px;
@@ -31,11 +38,6 @@
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-    font-size: 20px;
-    font-weight: 400;
-    font-style: normal;
-    cursor: pointer;
-    margin-bottom: 28px;
 }
 
 .createBtn:hover {
@@ -44,8 +46,7 @@
 
 @media(max-width: 992px) {
     .sidebar {
-        padding: 0;
-        padding-top: 20px;
+        padding-top: 20px 0 0 0;
         height: 380px;
         width: 100%;
         display: flex;
@@ -61,8 +62,8 @@
     }
 
     .createBtn {
+        flex: 1;
         margin-top: 36px;
-        width: 50%;
         height: 74px;
     }
 }
@@ -79,6 +80,7 @@
     .createBtn {
         margin-top: 36px;
         width: 100%;
+        font-size: 1.25em;
         height: 74px;
     }
 }
@@ -96,6 +98,6 @@
         margin-top: 20px;
         width: 100%;
         height: 50px;
-        font-size: 1em;
+        font-size: 1.13em;
     }
 }
