added responsive for Home 425px breakpoint

--- a/src/components/HomeComponents/homeHeaderButton/HomeHeaderButton.module.css
+++ b/src/components/HomeComponents/homeHeaderButton/HomeHeaderButton.module.css
@@ -41,5 +41,10 @@
     .todayBtn {
         font-size: .95em;
     }
+}
 
+@media(max-width: 425px) {
+    .todayBtn {
+        font-size: 1em;
+    }
 }
