--- a/src/components/HeaderComponents/headerBurger/HeaderBurger.module.css
+++ b/src/components/HeaderComponents/headerBurger/HeaderBurger.module.css
@@ -4,6 +4,8 @@
     padding: 8px;
     gap: 3px;
     cursor: pointer;
+    border: none;
+    background-color: transparent;  
 }
 
 .burger span {
