--- a/src/components/SideBarComponents/sidebar/Sidebar.module.css
+++ b/src/components/SideBarComponents/sidebar/Sidebar.module.css
@@ -1,4 +1,5 @@
 .sidebar {
+    position: relative;
     min-width: 200px;
     padding: 12px 5px;
     height: 100%;
@@ -10,9 +11,60 @@
     -o-transition: width 0.3s ease;
 }
 
+
 .sidebar.expanded {
     width: 365px;
     opacity: 1;
+}
+
+.sidebar.expandedForCreate {
+    width: 750px;
+    opacity: 1;
+}
+
+.createBtn {
+    font-family: "DM Sans", sans-serif;
+    color: var(--main-text);
+    font-size: 1.4em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    margin-bottom: 28px;
+    padding: 20px 25px;
+    width: 147px;
+    height: 74px;
+    background-color: var(--main-white);
+    font-weight: 400;
+    font-style: normal;
+    cursor: pointer;
+    border: none;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.createBtn:hover {
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+
+@media(max-width: 1320px) {
+    .sidebar {
+        width: 190px;
+    }
+
+    .sidebar.expanded {
+        width: 360px;
+        opacity: 1;
+    }
+    
+    .sidebar.expandedForCreate {
+        width: 360px;
+        opacity: 1;
+    }
 }
 
 @media(max-width: 992px) {
@@ -31,6 +83,12 @@
         height: 400px;
         opacity: 1;
     }
+
+    .createBtn {
+        flex: 1;
+        margin-top: 36px;
+        height: 74px;
+    }
 }
 
 @media(max-width: 768px) {
@@ -40,6 +98,13 @@
         width: 100%;
         display: block;
         margin-bottom: 40px;
+    }
+
+    .createBtn {
+        margin-top: 36px;
+        width: 100%;
+        font-size: 1.25em;
+        height: 74px;
     }
 }
 
@@ -51,4 +116,18 @@
         display: block;
         margin-bottom: 20px;
     }
+
+    .createBtn {
+        margin-top: 20px;
+        width: 100%;
+        height: 50px;
+        font-size: 1.13em;
+    }
 }
+
+@media(max-width: 425px) {
+    .createBtn {
+        font-size: 1.17em;
+    }
+}
+
