--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,7 +28,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0px 20px;
+  padding: 0px 20px 20px;
   background-color: var(--main-light-blue);
   overflow-x: hidden;
 }
