--- a/src/components/SideBarComponents/createForm/form/Form.module.css
+++ b/src/components/SideBarComponents/createForm/form/Form.module.css
@@ -52,7 +52,7 @@
     background-color: var(--main-white);
     border: none;
     font-size: 1.1em;
-    padding: 5px 10px;
+    padding: 8px 13px;
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
@@ -64,12 +64,12 @@
 .timeContainer {
     margin-top: 20px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
-.timeItem {
+.createForm.lg .timeContainer .timeItem {
     display: flex;
-    gap: 10px;
+    gap: 15px;
     align-items: center;
 }
 
@@ -82,7 +82,7 @@
     background-color: var(--main-white);
     border: none;
     font-size: 1.1em;
-    padding: 5px 10px;
+    padding: 8px 13px;
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
@@ -117,7 +117,7 @@
 .taskContainer input {
     font-size: 1.1em;
     width: 100%;
-    padding: 5px 10px;
+    padding: 8px 13px;
     border: none;
     border-radius: 10px;
     -webkit-border-radius: 10px;
@@ -148,7 +148,7 @@
     max-width: 100%;
     min-height: 100px;
     max-height: 100px;
-    padding: 5px 10px;
+    padding: 8px 13px;
     border: none;
     border-radius: 10px;
     -webkit-border-radius: 10px;
@@ -169,7 +169,63 @@
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
-    padding: 9px 12px;
+    padding: 8px 13px;
     font-size: 1.1em;
     font-weight: 300;
+}
+
+@media(max-width: 576px) {
+    .createForm.lg {
+        width: 300px;
+    }
+
+    .timeContainer {
+        margin-top: 20px;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        align-items: start;
+        justify-content: center;
+        gap: 20px;
+    }
+
+    .timeItem {
+        width: 100%;
+    }
+
+    .timeItem label {
+        width: 50px;
+    }
+
+    .timeItem input {
+        flex: 1;
+    }
+}
+
+@media(max-width: 375px) {
+    .createForm.lg {
+        width: 265px;
+    }
+
+    .timeContainer {
+        margin-top: 20px;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        align-items: start;
+        justify-content: center;
+        gap: 20px;
+    }
+
+    .timeItem {
+        width: 100%;
+    }
+
+    .timeItem label {
+        width: 50px;
+    }
+
+    .timeItem input {
+        flex: 1;
+    }
 }
