added Settings page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
 
   --bg-subtask-pink: rgb(255, 136, 250, .2);
   --bg-subtask-yellow: rgb(247, 192, 109, .2);
-  --bg-subtask-pink: rgb(153, 118, 255, .2);
+  --bg-subtask-blue: rgb(153, 118, 255, .2);
 }
 
 * {
