updated Settings page & FAQ page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,6 +48,7 @@ main .main-content {
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
   padding: 20px;
+  margin-top: 12px;
 }
 
 ::-webkit-scrollbar {
