--- a/src/components/SettingsComponents/timeZoneSelect/TimeZoneSelect.module.css
+++ b/src/components/SettingsComponents/timeZoneSelect/TimeZoneSelect.module.css
@@ -3,8 +3,14 @@
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
+    color: var(--main-text);
+    background-color: var(--main-white);
     font-size: 1em;
     width: 100%;
     max-width: 300px;
     cursor: pointer;
+}
+
+.settingsSelect {
+
 }
