--- a/src/components/HeaderComponents/headerMenu/HeaderMenu.module.css
+++ b/src/components/HeaderComponents/headerMenu/HeaderMenu.module.css
@@ -12,6 +12,10 @@
     padding-bottom: 1px;
 }
 
+/* .svgIcon {
+    filter: var(--svg-filter);
+} */
+
 .moreBtn {
     display: block;
     border: none;
