added fixes to search color toggle

--- a/src/components/HeaderComponents/header/Header.module.css
+++ b/src/components/HeaderComponents/header/Header.module.css
@@ -33,7 +33,7 @@
     -moz-border-radius: 80px;
     -ms-border-radius: 80px;
     -o-border-radius: 80px;
-    background-color: rgba(0, 0, 0, .06);
+    background-color: var(--main-white);
     border: none;
     padding: 21px;
     display: flex;
